--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,7 @@ body {
     @apply fixed z-50 w-full;
 
     div {
-      @apply flex md:flex-row flex-col md:justify-between items-center gap-5 py-5 lg:px-4 px-5 container mx-auto;
+      @apply flex md:flex-row flex-col md:justify-between items-center gap-5 py-5 lg:px-15 px-5 container mx-auto;
     }
 
     p {
@@ -107,7 +107,7 @@ body {
       @apply container mx-auto absolute left-1/2 -translate-x-1/2 lg:bottom-20 top-auto md:top-[30vh] flex justify-between items-end px-5;
 
       .content {
-        @apply flex lg:flex-row flex-col w-full gap-10 justify-between items-center lg:items-end mx-auto;
+        @apply flex lg:flex-row flex-col w-full gap-10 justify-between items-center lg:items-end lg:px-15 mx-auto;
 
         p:nth-of-type(2) {
           @apply font-modern-negra text-6xl text-yellow max-w-xl;
@@ -148,7 +148,7 @@ body {
     }
 
     .list {
-      @apply container mx-auto relative z-10 flex md:flex-row flex-col justify-between items-start gap-20 pt-40 2xl:px-0 px-5;
+      @apply container mx-auto relative z-10 flex md:flex-row flex-col justify-between items-start gap-20 pt-40 lg:px-15 px-5;
 
       .popular {
         @apply space-y-8 w-full md:w-fit;
@@ -216,7 +216,7 @@ body {
     }
 
     .top-grid {
-      @apply grid grid-cols-1 xl:grid-cols-12 gap-5 mb-5 md:px-0 px-5;
+      @apply grid grid-cols-1 xl:grid-cols-12 gap-5 mb-5 md:px-15 px-5;
 
       > div {
         @apply rounded-3xl overflow-hidden h-72 relative;
@@ -228,7 +228,7 @@ body {
     }
 
     .bottom-grid {
-      @apply grid grid-cols-1 md:grid-cols-12 gap-5 md:px-0 px-5;
+      @apply grid grid-cols-1 md:grid-cols-12 gap-5 md:px-15 px-5;
 
       > div {
         @apply rounded-3xl overflow-hidden h-72 relative;
